--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,17 +1,23 @@
 {
   "api": {
     "musifyb": {
-      "dependsOn": [],
+      "dependsOn": [
+        {
+          "attributes": [
+            "UserPoolId"
+          ],
+          "category": "auth",
+          "resourceName": "musifyb9f91aa5e"
+        }
+      ],
       "output": {
         "authConfig": {
           "additionalAuthenticationProviders": [],
           "defaultAuthentication": {
-            "apiKeyConfig": {
-              "apiKeyExpirationDate": "2025-06-23T13:54:41.097Z",
-              "apiKeyExpirationDays": 365,
-              "description": ""
-            },
-            "authenticationType": "API_KEY"
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authmusifyb9f91aa5e"
+            }
           }
         }
       },
